media/templates/bazarr/bazarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "ca-issuer"
    cert-manager.io/common-name: "bazarr.raspberrypi"
  name: "bazarr-ingress"
spec:
  tls:
  - hosts:
    - bazarr.raspberrypi
    secretName: bazarr-auto-certificate-key-pair
  rules:
  - host: bazarr.raspberrypi
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bazarr
            port:
              name: http
